tests/NormalTests/paczka1/small_fuzzy/71123778.err
Error in line 8: A80 S924 69,8
Error in line 12: 11DP61Ub A]2] 20,1
Error in line 10: A80 A12 70,2
